# train_timetable

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  departures.json  fetch_departures.js  index.html  package-lock.json  package.json  pyproject.toml  run_app.sh
.github/workflows/: pages.yml  python-ci.yml
tests/: __init__.py  conftest.py  test_data_integration.py  test_data_processing.py  test_edge_cases.py  test_train_processing.py
