[project]
name = "train-updates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "loguru>=0.7.3",
    "pandas>=2.0.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.12.0",
    "freezegun>=1.5.0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "ruff>=0.12.5",
    "streamlit>=1.47.1",
    "streamlit-autorefresh>=1.0.1",
]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "E",   # flake8
    "F",   # pyflakes
    "I",   # isort
    "ANN"  # flake8-annotations
]
ignore = [
    "E501",   # line length
    "ANN003", # **kwargs annotation
    "ANN204" # type hint on __init__
]
unfixable = ["F401"]
exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",        # Doctstrings
    "S101",     # Allow asserts
    "ANN201",   # Return type annotation
    "ANN401",   # Dynamically typed expressions (Any)
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
